--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ Django==2.1.5
 django-heroku==0.3.1
 django-widget-tweaks==1.4.3
 model-mommy==1.6.0
-psycopg2==2.7.7
+psycopg2-binary==2.7.7
 whitenoise==4.1.2
